# server/generated/openapi_server/models/__init__.py
@@ -1,11 +1,15 @@
 # flake8: noqa
 # import models into model package
+from openapi_server.models.behavior import Behavior
+from openapi_server.models.command_get200_response import CommandGet200Response
+from openapi_server.models.command_get_request import CommandGetRequest
 from openapi_server.models.command_listen_keyword_post200_response import CommandListenKeywordPost200Response
 from openapi_server.models.command_listen_keyword_post_request import CommandListenKeywordPostRequest
 from openapi_server.models.command_listen_silence_post200_response import CommandListenSilencePost200Response
 from openapi_server.models.command_listen_silence_post_request import CommandListenSilencePostRequest
 from openapi_server.models.command_speak_post200_response import CommandSpeakPost200Response
 from openapi_server.models.command_speak_post_request import CommandSpeakPostRequest
+from openapi_server.models.pair_post_request import PairPostRequest
 from openapi_server.models.status_get200_response import StatusGet200Response
 from openapi_server.models.style import Style
 from openapi_server.models.style_gaze import StyleGaze
