# server/generated/openapi_server/models/behavior.py
@@ -1,0 +1,149 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class Behavior(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, type=None, amplitude=None, speed=None, utterance=None):  # noqa: E501
+        """Behavior - a model defined in OpenAPI
+
+        :param type: The type of this Behavior.  # noqa: E501
+        :type type: str
+        :param amplitude: The amplitude of this Behavior.  # noqa: E501
+        :type amplitude: float
+        :param speed: The speed of this Behavior.  # noqa: E501
+        :type speed: float
+        :param utterance: The utterance of this Behavior.  # noqa: E501
+        :type utterance: str
+        """
+        self.openapi_types = {
+            'type': str,
+            'amplitude': float,
+            'speed': float,
+            'utterance': str
+        }
+
+        self.attribute_map = {
+            'type': 'type',
+            'amplitude': 'amplitude',
+            'speed': 'speed',
+            'utterance': 'utterance'
+        }
+
+        self._type = type
+        self._amplitude = amplitude
+        self._speed = speed
+        self._utterance = utterance
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Behavior':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Behavior of this Behavior.  # noqa: E501
+        :rtype: Behavior
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this Behavior.
+
+        Type of behavior (e.g., nod, utterance, gaze)  # noqa: E501
+
+        :return: The type of this Behavior.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this Behavior.
+
+        Type of behavior (e.g., nod, utterance, gaze)  # noqa: E501
+
+        :param type: The type of this Behavior.
+        :type type: str
+        """
+        if type is None:
+            raise ValueError("Invalid value for `type`, must not be `None`")  # noqa: E501
+
+        self._type = type
+
+    @property
+    def amplitude(self) -> float:
+        """Gets the amplitude of this Behavior.
+
+        Amplitude of the behavior (for nodding behavior)  # noqa: E501
+
+        :return: The amplitude of this Behavior.
+        :rtype: float
+        """
+        return self._amplitude
+
+    @amplitude.setter
+    def amplitude(self, amplitude: float):
+        """Sets the amplitude of this Behavior.
+
+        Amplitude of the behavior (for nodding behavior)  # noqa: E501
+
+        :param amplitude: The amplitude of this Behavior.
+        :type amplitude: float
+        """
+
+        self._amplitude = amplitude
+
+    @property
+    def speed(self) -> float:
+        """Gets the speed of this Behavior.
+
+        Speed of the behavior (for nodding behavior)  # noqa: E501
+
+        :return: The speed of this Behavior.
+        :rtype: float
+        """
+        return self._speed
+
+    @speed.setter
+    def speed(self, speed: float):
+        """Sets the speed of this Behavior.
+
+        Speed of the behavior (for nodding behavior)  # noqa: E501
+
+        :param speed: The speed of this Behavior.
+        :type speed: float
+        """
+
+        self._speed = speed
+
+    @property
+    def utterance(self) -> str:
+        """Gets the utterance of this Behavior.
+
+        Utterance text (for utterance behavior)  # noqa: E501
+
+        :return: The utterance of this Behavior.
+        :rtype: str
+        """
+        return self._utterance
+
+    @utterance.setter
+    def utterance(self, utterance: str):
+        """Sets the utterance of this Behavior.
+
+        Utterance text (for utterance behavior)  # noqa: E501
+
+        :param utterance: The utterance of this Behavior.
+        :type utterance: str
+        """
+
+        self._utterance = utterance
