# server/generated/openapi_server/models/command_get200_response.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server.models.behavior import Behavior
+from openapi_server import util
+
+from openapi_server.models.behavior import Behavior  # noqa: E501
+
+class CommandGet200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, behavior=None):  # noqa: E501
+        """CommandGet200Response - a model defined in OpenAPI
+
+        :param behavior: The behavior of this CommandGet200Response.  # noqa: E501
+        :type behavior: Behavior
+        """
+        self.openapi_types = {
+            'behavior': Behavior
+        }
+
+        self.attribute_map = {
+            'behavior': 'Behavior'
+        }
+
+        self._behavior = behavior
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CommandGet200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _command_get_200_response of this CommandGet200Response.  # noqa: E501
+        :rtype: CommandGet200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def behavior(self) -> Behavior:
+        """Gets the behavior of this CommandGet200Response.
+
+
+        :return: The behavior of this CommandGet200Response.
+        :rtype: Behavior
+        """
+        return self._behavior
+
+    @behavior.setter
+    def behavior(self, behavior: Behavior):
+        """Sets the behavior of this CommandGet200Response.
+
+
+        :param behavior: The behavior of this CommandGet200Response.
+        :type behavior: Behavior
+        """
+
+        self._behavior = behavior
