# server/generated/openapi_server/models/pair_post_request.py
@@ -1,0 +1,91 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class PairPostRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, robot_id=None, pairing_token=None):  # noqa: E501
+        """PairPostRequest - a model defined in OpenAPI
+
+        :param robot_id: The robot_id of this PairPostRequest.  # noqa: E501
+        :type robot_id: str
+        :param pairing_token: The pairing_token of this PairPostRequest.  # noqa: E501
+        :type pairing_token: str
+        """
+        self.openapi_types = {
+            'robot_id': str,
+            'pairing_token': str
+        }
+
+        self.attribute_map = {
+            'robot_id': 'robot_id',
+            'pairing_token': 'pairing_token'
+        }
+
+        self._robot_id = robot_id
+        self._pairing_token = pairing_token
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PairPostRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _pair_post_request of this PairPostRequest.  # noqa: E501
+        :rtype: PairPostRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def robot_id(self) -> str:
+        """Gets the robot_id of this PairPostRequest.
+
+        The unique identifier for the robot  # noqa: E501
+
+        :return: The robot_id of this PairPostRequest.
+        :rtype: str
+        """
+        return self._robot_id
+
+    @robot_id.setter
+    def robot_id(self, robot_id: str):
+        """Sets the robot_id of this PairPostRequest.
+
+        The unique identifier for the robot  # noqa: E501
+
+        :param robot_id: The robot_id of this PairPostRequest.
+        :type robot_id: str
+        """
+
+        self._robot_id = robot_id
+
+    @property
+    def pairing_token(self) -> str:
+        """Gets the pairing_token of this PairPostRequest.
+
+        The pairing token to authenticate with the server  # noqa: E501
+
+        :return: The pairing_token of this PairPostRequest.
+        :rtype: str
+        """
+        return self._pairing_token
+
+    @pairing_token.setter
+    def pairing_token(self, pairing_token: str):
+        """Sets the pairing_token of this PairPostRequest.
+
+        The pairing token to authenticate with the server  # noqa: E501
+
+        :param pairing_token: The pairing_token of this PairPostRequest.
+        :type pairing_token: str
+        """
+
+        self._pairing_token = pairing_token
